# PPP-Market-Analog-Computer

./: .env.example  .gitignore  2026-01-11_GIT_Paper_Revision.md  CLAUDE.md  CODING_AGENT_PROMPT.md  Chronomorphic Polytopal Engine Expansion.md  Chronomorphic Polytopal Engine – Provisional Patent Application Outline.docx  DEV_TRACK (1).md  DEV_TRACK.md  E8H4Folding.ts  E8VisualizationRenderer.js  E8_LEPTON_MASS_DISCOVERY.md  E8_PHI_HIERARCHY_COMPLETE_ANALYSIS.md  E8_THREE_BODY_ACADEMIC_DOCUMENTATION.md  EVOLUTION_PATHS.md  Evolving Music AI Architecture and Use Cases (1).txt  Geometric HDC Research Strategy.txt  Lattice600.ts  Phillips_GIT_Foundation.md  Phillips_Geometric_Information_Theory (1).html  Phillips_Geometric_Information_Theory_PUBLICATION.md  Polytopal Engine Trinity Refactor.txt  Polytopal Metamorphosis_ A Theoretical and Architectural Framework for Dynamic State-Space Evolution in Cognitive Computing.txt  Polytope Decompositions for Musical Mapping.txt  Push.txt  README.md  ROADMAP.md  Refactor Plan_ The Trinity Architecture.txt  SIMULATION_DESIGN.md  SIMULATION_RESULTS.md  SimulationRunner.ts  ThreeBodyPhaseSpace.ts  TrinityDecomposition.ts  WHAT_THIS_DOES.md  WHITEPAPER.md  analyze_matrix_rank.ts  analyze_trinity_structure.ts  antijam_600cell.py  architecture_analysis.py  compare_foldings.ts  (+96 more)
_SYNERGIZED_SYSTEM/backend/: Dockerfile  pyproject.toml
_SYNERGIZED_SYSTEM/backend/engine/: __init__.py  enforcer.py  main.py  pipeline.py  websocket_server.py
_SYNERGIZED_SYSTEM/backend/engine/constellation/: __init__.py  h4_constellation.py
_SYNERGIZED_SYSTEM/backend/engine/control/: __init__.py  tripole_actuator.py
_SYNERGIZED_SYSTEM/backend/engine/core/: __init__.py  batch_encoder.py  cache.py  fast_cascade.py  fast_moire.py
_SYNERGIZED_SYSTEM/backend/engine/features/: __init__.py  extractor.py  gabor.py  golden_wavelet.py  hog.py  lpq_decoder.py  moments.py  spectral.py  wavelet.py
_SYNERGIZED_SYSTEM/backend/engine/geometry/: __init__.py  e8_projection.py  h4_geometry.py  quasicrystal_architecture.py  quaternion_4d.py
_SYNERGIZED_SYSTEM/backend/tests/: compare_moxness_pdf_vs_phillips.py  compare_moxness_phillips.py  complete_moxness_catalog_vs_phillips.py  conftest.py  explore_five_conjectures.py  explore_novelty_and_plastic.py  explore_phillips_kernel.py  test_constellation.py  test_e8_projection.py  test_enforcer.py  test_features.py  test_geometry_exports.py  test_h4_geometry.py  test_hdc.py  test_kirigami_sheet.py  test_moire_physics.py  test_phillips_matrix.py  test_pipeline_integration.py  test_quasicrystal_architecture.py  test_quasicrystal_mode_integration.py  test_quaternion.py  test_reservoir.py  test_tristable_cell.py  test_websocket_server.py
hemoc/: __init__.py  __main__.py  cli.py  pyproject.toml
hemoc/core/: __init__.py  cell_600.py  e8_roots.py  h4_decomposition.py  kernel_basis.py  phillips_matrix.py
hemoc/experiments/: __init__.py  experiments.yaml  registry.py
hemoc/render/: __init__.py  dual_channel_renderer.py  renderer_contract.py  renderer_test_suite.py
hemoc/theory/: __init__.py  galois_verifier.py  golden_hadamard.py  invariant_verifier.py
rust-engine/: Cargo.toml  README.md  build-web.sh
rust-engine/benches/: geometry_bench.rs
rust-engine/src/: lib.rs  main.rs  web.rs
rust-engine/src/analysis/: homology.rs  metrics.rs  mod.rs  patterns.rs
rust-engine/src/cognitive/: dialectic.rs  market_larynx.rs  mod.rs  rules.rs  trinity.rs
rust-engine/src/geometry/: cell120.rs  cell24.rs  cell600.rs  core.rs  mod.rs  polytope.rs  projection.rs  quaternion.rs  vector.rs
rust-engine/src/pipeline/: ingestion.rs  mapper.rs  mod.rs  output.rs
rust-engine/src/rendering/: engine.rs  mod.rs  pixel_rules.rs  shaders.rs  vertex.rs
rust-engine/web/: app.js  index.html
rust-engine/web/pkg/: geometric_cognition.js  geometric_cognition_bg.wasm
(+521 files in other folders)
